--- a/css/social.css
+++ b/css/social.css
@@ -4,11 +4,13 @@
 	padding-left: 0;
 	list-style: none;
 }
+
 .list-inline li {
-	display: inline-block;
-	padding-right: 5px;
-	padding-left: 5px;
-	margin-bottom: 10px;
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-bottom: 10px;
+}
 
 .social-icons .fa {
 	font-size: 1.8em;
