--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,5 +1,4 @@
 .button {
-    background-color: #4CAF50; /* Green */
     border: none;
     color: white;
     padding: 16px 32px;
@@ -8,7 +7,7 @@
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
 }
@@ -16,11 +15,11 @@
 .button1 {
     background-color: white;
     color: black;
-    border: 2px solid #4CAF50;
+    border: 2px solid #FF2626;
 }
 
 .button1:hover {
-    background-color: #4CAF50;
+    background-color: #FF2626;
     color: white;
 }
 
@@ -32,35 +31,5 @@
 
 .button2:hover {
     background-color: #008CBA;
-    color: white;
-}
-
-.button3 {
-    background-color: white;
-    color: black;
-    border: 2px solid #f44336;
-}
-
-.button3:hover {
-    background-color: #f44336;
-    color: white;
-}
-
-.button4 {
-    background-color: white;
-    color: black;
-    border: 2px solid #e7e7e7;
-}
-
-.button4:hover {background-color: #e7e7e7;}
-
-.button5 {
-    background-color: white;
-    color: black;
-    border: 2px solid #555555;
-}
-
-.button5:hover {
-    background-color: #555555;
     color: white;
 }
