--- a/css/cards.css
+++ b/css/cards.css
@@ -1,160 +1,175 @@
 a:hover, a:focus, a:active {
-  outline: none;
-  text-decoration: none;
+    outline: none;
+    text-decoration: none;
 }
 
-.fh5co-project-style-1,
-.fh5co-project-style-2,
-.fh5co-project-style-3,
-.fh5co-project-style-4 {
-  padding: 0;
-}
-@media screen and (max-width: 768px) {
-  .fh5co-project-style-1,
-  .fh5co-project-style-2,
-  .fh5co-project-style-3,
-  .fh5co-project-style-4 {
+.fh5co-project-style-1, .fh5co-project-style-2, .fh5co-project-style-3, .fh5co-project-style-4 {
     padding: 0;
-  }
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-project-style-1, .fh5co-project-style-2, .fh5co-project-style-3, .fh5co-project-style-4 {
+        padding: 0;
+    }
 }
 
 .fh5co-project-style-1 .fh5co-grid {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  border-radius: 4px;
-  background-size: cover;
-  overflow: hidden;
-  margin-bottom: 30px;
-  position: relative;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    background-size: cover;
+    overflow: hidden;
+    margin-bottom: 30px;
+    position: relative;
 }
-.fh5co-project-style-1 .fh5co-grid > a {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  border-radius: 4px;
-  position: absolute;
-  background: #1784fb;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: 0;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+
+.fh5co-project-style-1 .fh5co-grid>a {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    position: absolute;
+    background: #1784fb;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
-.fh5co-project-style-1 .fh5co-grid > a i {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -20px;
-  margin-left: -20px;
-  font-size: 40px;
-  color: #fff;
+
+.fh5co-project-style-1 .fh5co-grid>a i {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -20px;
+    margin-left: -20px;
+    font-size: 40px;
+    color: #fff;
 }
-.fh5co-project-style-1 .fh5co-grid > a:hover {
-  opacity: .9;
+
+.fh5co-project-style-1 .fh5co-grid>a:hover {
+    opacity: .9;
 }
+
 .fh5co-project-style-1 .fh5co-grid-1 {
-  height: 544px;
+    height: 544px;
 }
+
 @media screen and (max-width: 768px) {
-  .fh5co-project-style-1 .fh5co-grid-1 {
-    height: 254px;
-  }
+    .fh5co-project-style-1 .fh5co-grid-1 {
+        height: 254px;
+    }
 }
+
 .fh5co-project-style-1 .fh5co-grid-2 {
-  height: 257px;
+    height: 257px;
 }
+
 .fh5co-project-style-1 .fh5co-grid-3 {
-  height: 257px;
+    height: 257px;
 }
 
 .fh5co-project-style-2 {
-  padding-bottom: 0;
+    padding-bottom: 0;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li {
-  padding: 0;
-  margin: 0;
-  position: relative;
-  list-style: none;
-  -webkit-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  -ms-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  -o-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  background-color: transparent;
-  background-size: cover;
-  background-attachment: fixed;
-  position: relative;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    list-style: none;
+    -webkit-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    -moz-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    -ms-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    -o-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    background-color: transparent;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a {
-  width: 100%;
-  position: relative;
-  display: block;
+    width: 100%;
+    position: relative;
+    display: block;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-overlay {
-  background: #F05F40;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  opacity: .8;
-  width: 100%;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+    background: #F05F40;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    opacity: .8;
+    width: 100%;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text {
-  display: table;
-  width: 100%;
-  position: relative;
-  z-index: 2;
+    display: table;
+    width: 100%;
+    position: relative;
+    z-index: 2;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner {
-  display: table-cell;
-  vertical-align: middle;
-  height: 200px;
+    display: table-cell;
+    vertical-align: middle;
+    height: 200px;
 }
+
 @media screen and (max-width: 768px) {
-  .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner {
-    height: inherit;
-    padding: 4em 0;
-  }
+    .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner {
+        height: inherit;
+        padding: 4em 0;
+    }
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner h3 {
-  margin-bottom: 0;
-  color: #fff;
+    margin-bottom: 0;
+    color: #fff;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner p {
-  font-size: 20px;
-  line-height: 28px;
-  color: rgba(255, 255, 255, 0.5);
+    font-size: 20px;
+    line-height: 28px;
+    color: rgba(255, 255, 255, 0.5);
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner p:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
+
 @media screen and (max-width: 768px) {
-  .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner p {
-    font-size: 16px;
-    line-height: 24px;
-  }
+    .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner p {
+        font-size: 16px;
+        line-height: 24px;
+    }
 }
-.fh5co-project-style-2 .fh5co-projects ul li a > .container {
-  position: relative;
+
+.fh5co-project-style-2 .fh5co-projects ul li a>.container {
+    position: relative;
 }
+
 .fh5co-project-style-2 .fh5co-projects ul li a:hover .fh5co-overlay {
-  opacity: .4;
+    opacity: .4;
 }
