--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* main page */
 html, body {
     width: 100%;
     height: 100%;
@@ -383,4 +384,486 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #222;
+}
+
+/* social buttons */
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css);
+.list-unstyled {
+    padding-left: 0;
+    list-style: none;
+}
+
+.list-inline li {
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-bottom: 10px;
+}
+
+.social-icons .fa {
+    font-size: 1.8em;
+}
+
+.social-icons .fa {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    color: #fff;
+    color: #fff;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.social-icons.icon-circle .fa {
+    border-radius: 50%;
+}
+
+.social-icons .fa:hover, .social-icons .fa:active {
+    color: #fff;
+    -webkit-box-shadow: 1px 1px 3px #333;
+    -moz-box-shadow: 1px 1px 3px #333;
+    box-shadow: 1px 1px 3px #333;
+}
+
+.social-icons.icon-zoom .fa:hover, .social-icons.icon-zoom .fa:active {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.social-icons.icon-rotate .fa:hover, .social-icons.icon-rotate .fa:active {
+    -webkit-transform: scale(1.1) rotate(360deg);
+    -moz-transform: scale(1.1) rotate(360deg);
+    -ms-transform: scale(1.1) rotate(360deg);
+    -o-transform: scale(1.1) rotate(360deg);
+    transform: scale(1.1) rotate(360deg);
+}
+
+.social-icons .fa-facebook, .social-icons .fa-facebook-square {
+    background-color: #000;
+}
+
+.social-icons .fa-github, .social-icons .fa-github-alt, .social-icons .fa-github-square {
+    background-color: #000;
+}
+
+.social-icons .fa-google-plus, .social-icons .fa-google-plus-square {
+    background-color: #000;
+}
+
+.social-icons .fa-linkedin, .social-icons .fa-linkedin-square {
+    background-color: #000;
+}
+
+.social-icons .fa-wordpress {
+    background-color: #000;
+}
+
+.social-icons .fa-tumblr, .social-icons .fa-tumblr-square {
+    background-color: #000;
+}
+
+.social-icons .fa-twitter, .social-icons .fa-twitter-square {
+    background-color: #000;
+}
+
+/* contact */
+#c {
+    background: #000;
+    padding-top: 10px;
+    text-align: center;
+}
+
+#c p {
+    color: #fff;
+}
+
+/* cards */
+a:hover, a:focus, a:active {
+    outline: none;
+    text-decoration: none;
+}
+
+.fh5co-project-style-1, .fh5co-project-style-2, .fh5co-project-style-3, .fh5co-project-style-4 {
+    padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-project-style-1, .fh5co-project-style-2, .fh5co-project-style-3, .fh5co-project-style-4 {
+        padding: 0;
+    }
+}
+
+.fh5co-project-style-1 .fh5co-grid {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    background-size: cover;
+    overflow: hidden;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.fh5co-project-style-1 .fh5co-grid>a {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    position: absolute;
+    background: #1784fb;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.fh5co-project-style-1 .fh5co-grid>a i {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -20px;
+    margin-left: -20px;
+    font-size: 40px;
+    color: #fff;
+}
+
+.fh5co-project-style-1 .fh5co-grid>a:hover {
+    opacity: .9;
+}
+
+.fh5co-project-style-1 .fh5co-grid-1 {
+    height: 544px;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-project-style-1 .fh5co-grid-1 {
+        height: 254px;
+    }
+}
+
+.fh5co-project-style-1 .fh5co-grid-2 {
+    height: 257px;
+}
+
+.fh5co-project-style-1 .fh5co-grid-3 {
+    height: 257px;
+}
+
+.fh5co-project-style-2 {
+    padding-bottom: 0;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul {
+    padding: 0;
+    margin: 0;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li {
+    padding: 0;
+    margin: 0;
+    position: relative;
+    list-style: none;
+    -webkit-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    -moz-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    -ms-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    -o-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
+    background-color: transparent;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a {
+    width: 100%;
+    position: relative;
+    display: block;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a .fh5co-overlay {
+    background: #F05F40;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    opacity: .8;
+    width: 100%;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text {
+    display: table;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner {
+    display: table-cell;
+    vertical-align: middle;
+    height: 200px;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner {
+        height: inherit;
+        padding: 4em 0;
+    }
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner h3 {
+    margin-bottom: 0;
+    color: #fff;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner p {
+    font-size: 20px;
+    line-height: 28px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner p:last-child {
+    margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-project-style-2 .fh5co-projects ul li a .fh5co-text .fh5co-text-inner p {
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a>.container {
+    position: relative;
+}
+
+.fh5co-project-style-2 .fh5co-projects ul li a:hover .fh5co-overlay {
+    opacity: .4;
+}
+
+/* button */
+.button {
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: white;
+    color: black;
+    border: 2px solid #FF2626;
+}
+
+.button1:hover {
+    background-color: #FF2626;
+    color: white;
+}
+
+.button2 {
+    background-color: white;
+    color: black;
+    border: 2px solid #008CBA;
+}
+
+.button2:hover {
+    background-color: #008CBA;
+    color: white;
+}
+
+/* styles */
+body {
+    background: #fff;
+    font-family: 'Montserrat', sans-serif;
+    color: #000;
+    line-height: 1.3;
+    -webkit-font-smoothing: antialiased;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
+}
+
+a {
+    color: #2d7788;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+}
+
+a:focus {
+    text-decoration: none;
+}
+
+p {
+    line-height: 1.5;
+}
+
+.main-wrapper {
+    background: #fff;
+    padding: 100px;
+}
+
+.main-wrapper .section-title {
+    text-transform: uppercase;
+    font-size: 30px;
+    font-weight: bold;
+    color: #F05F40;
+    position: relative;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.main-wrapper .section-title .fa {
+    width: 30px;
+    height: 30px;
+    margin-right: 8px;
+    display: inline-block;
+    color: #fff;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    background: #F05F40;
+    text-align: center;
+    padding-top: 6px;
+    font-size: 16px;
+    position: relative;
+    top: -5px;
+    margin-top: 30px;
+}
+
+.main-wrapper .section {
+    margin-bottom: 60px;
+}
+
+.main-wrapper .experiences-section .item {
+    margin-bottom: 30px;
+}
+
+.main-wrapper .upper-row {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 2px;
+}
+
+.main-wrapper .job-title {
+    color: #F34D00;
+    font-size: 16px;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: 500;
+}
+
+.main-wrapper .time {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #F34D00;
+}
+
+.main-wrapper .company {
+    margin-bottom: 10px;
+    color: #F34D00;
+}
+
+.main-wrapper .project-title {
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.main-wrapper .projects-section .intro {
+    margin-bottom: 30px;
+}
+
+.main-wrapper .projects-section .item {
+    margin-bottom: 15px;
+}
+
+.skillset .item {
+    margin-bottom: 15px;
+    overflow: hidden;
+}
+
+.skillset .level-title {
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 12px;
+}
+
+.skillset .level-bar {
+    height: 12px;
+    background: #f5f5f5;
+}
+
+.skillset .level-bar-inner {
+    height: 12px;
+    background: #7bc2d3;
+}
+
+@media (max-width: 767px) {
+    .sidebar-wrapper {
+        position: static;
+        width: inherit;
+    }
+    .main-wrapper {
+        padding: 10px;
+    }
+    .main-wrapper .time {
+        position: static;
+        display: block;
+        margin-top: 0px;
+    }
+    .main-wrapper .upper-row {
+        margin-bottom: 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .skillset .level-title {
+        display: inline-block;
+        float: left;
+        width: 30%;
+        margin-bottom: 110;
+    }
+    .skillset .level-bar {
+        display: inline-block;
+        width: 70%;
+        float: left;
+        top: 0px;
+    }
 }
