--- a/css/main.css
+++ b/css/main.css
@@ -1,162 +1,158 @@
-/* main.css contains bootstrap, mainpage, style */
+/* main.css contains style, bootstrap, mainpage */
+
 
 /* style */
 
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css);
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
 }
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+
 body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: cpllapse;
-  border-spacing: 0;
+    line-height: 1;
 }
 
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: cpllapse;
+    border-spacing: 0;
+}
 
 * {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html, body {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 body {
-  background: #fff;
-  font-family: 'Montserrat', sans-serif;
-  color: #fff;
-  line-height: 1.3;
-  -webkit-font-smoothing: antialiased;
+    background: #fff;
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    line-height: 1.3;
+    -webkit-font-smoothing: antialiased;
 }
 
 #particles {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #intro {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  padding: 100px;
-  width: 100%;
-  text-align: center;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    padding: 100px;
+    width: 100%;
+    text-align: center;
 }
-h1 {
-  text-transform: uppercase;
-  font-size: 85px;
-  font-weight: 700;
-  letter-spacing: 0.015em;
 
+h1 {
+    text-transform: uppercase;
+    font-size: 85px;
+    font-weight: 700;
+    letter-spacing: 0.015em;
 }
-p{
-  margin: 0 0 30px 0;
-  font-size: 24px;
+
+p {
+    margin: 0 0 30px 0;
+    font-size: 24px;
 }
+
 .btn {
-  display: inline-block;
-  padding: 15px 30px;
-  border: 2px solid #fff;
-  text-transform: uppercase;
-  letter-spacing: 0.015em;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1;
-  color: #fff;
-  text-decoration: none;
-  -webkit-transition: all 0.4s;
-     -moz-transition: all 0.4s;
-       -o-transition: all 0.4s;
-          transition: all 0.4s;
+    display: inline-block;
+    padding: 15px 30px;
+    border: 2px solid #fff;
+    text-transform: uppercase;
+    letter-spacing: 0.015em;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-decoration: none;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
 }
+
 .btn:hover {
-  color: #005544;
-  border-color: #005544;
+    color: #005544;
+    border-color: #005544;
 }
 
 @media only screen and (max-width: 1000px) {
-  h1 {
-    font-size: 70px;
-  }
+    h1 {
+        font-size: 70px;
+    }
 }
 
 @media only screen and (max-width: 800px) {
-  h1 {
-    font-size: 48px;
-  }
-  h1::after {
-    height: 8px;
-  }
+    h1 {
+        font-size: 48px;
+    }
+    h1::after {
+        height: 8px;
+    }
 }
 
 @media only screen and (max-width: 568px) {
-  #intro {
-    padding: 10px;
-  }
-  h1 {
-    font-size: 30px;
-  }
-  h1::after {
-    height: 6px;
-  }
-  p {
-    font-size: 18px;
-  }
-  .btn {
-    font-size: 16px;
-  }
+    #intro {
+        padding: 10px;
+    }
+    h1 {
+        font-size: 30px;
+    }
+    h1::after {
+        height: 6px;
+    }
+    p {
+        font-size: 18px;
+    }
+    .btn {
+        font-size: 16px;
+    }
 }
 
 @media only screen and (max-width: 320px) {
-  h1 {
-    font-size: 28px;
-  }
-  h1::after {
-    height: 4px;
-  }
+    h1 {
+        font-size: 28px;
+    }
+    h1::after {
+        height: 4px;
+    }
 }
 
+
 /* bootstrap */
+
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
     display: block;
 }
@@ -7104,7 +7100,9 @@ button.close {
     }
 }
 
+
 /* main page */
+
 html, body {
     width: 100%;
     height: 100%;
@@ -7492,7 +7490,9 @@ body {
     webkit-tap-highlight-color: #222;
 }
 
+
 /* social buttons */
+
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css);
 .list-unstyled {
     padding-left: 0;
@@ -7579,7 +7579,9 @@ body {
     background-color: #000;
 }
 
+
 /* contact */
+
 #c {
     background: #000;
     padding-top: 10px;
@@ -7590,7 +7592,9 @@ body {
     color: #fff;
 }
 
+
 /* cards */
+
 a:hover, a:focus, a:active {
     outline: none;
     text-decoration: none;
@@ -7767,7 +7771,9 @@ a:hover, a:focus, a:active {
     opacity: .4;
 }
 
+
 /* button */
+
 .button {
     border: none;
     color: white;
@@ -7804,7 +7810,9 @@ a:hover, a:focus, a:active {
     color: white;
 }
 
+
 /* styles */
+
 body {
     background: #fff;
     font-family: 'Montserrat', sans-serif;
